# optimus-rs

./: Cargo.toml  README.md  flake.nix  optimus.yaml
.github/workflows/: test.yml
src/: lib.rs  main.rs
src/config/: command.rs  config.rs  global.rs  load.rs  mod.rs  parse.rs  service.rs
src/utils/: mod.rs  project_root.rs  string_or_struct.rs
