[package]
name = "optimus-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = {version ="4.3.19", features = ["derive", "string"]}
log = "0.4.19"

serde = {version="1.0.182", features = ["derive"]}
serde_yaml = "0.9.25"
syn = "2.0.28"
